work page mostly done, need to add imgs

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,6 +3,7 @@
   desc: Contributed to group project for semester-long 
       software engineering development example. Design 
       and development. 
+  site: http://cmkm.io/snappy
   github: http://github.com/cmkm/snappy
   imgslug: snappy
 
@@ -23,3 +24,4 @@
   desc: Quick web design for individual project as part of 
     semester-long group mock business design for a class. 
     Logo design not mine.
+  site: http://cmkm.io/2070
